--- a/home/.config/waybar/style.css
+++ b/home/.config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 5px;
 }
 
@@ -34,7 +34,7 @@ window#waybar.empty {
     background-color: transparent;
 }
 window#waybar.solo {
-    background-color: #FFFFFF;
+    background-color: #FFFFFF;,
 }
 */
 
@@ -61,18 +61,20 @@ button:hover {
     box-shadow: inset 0 -3px #ebdbb2;
 } */
 
-#mode,
-#scratchpad,
-#window,
-#idle_inhibitor,
-#wireplumber,
-#network,
-#cpu,
-#memory,
-#temperature,
 #clock,
+#cpu,
+#disk,
+#idle_inhibitor,
+#load,
+#memory,
+#mode,
+#network,
+#scratchpad,
+#systemd-failed-units,
+#temperature,
 #tray,
-#load {
+#window,
+#wireplumber {
     padding: 0 10px;
     background-color: #282828;
     color: #ebdbb2;
